@@ -2,7 +2,7 @@
 #' 
 #' Specify what database you want to use: itis or ncbi.
 #' 
-#' @param query character; Taxonomic name. Needs to of length 1!
+#' @param query character; Vector of taxonomic names to query.
 #' @param get character; The ranks of the taxonomic name to get. 
 #' @param db character; The database to search from: 'tis' or 'ncbi'.
 #' @param verbose logical; If TRUE the actual taxon queried is printed on the console.
@@ -29,43 +29,45 @@ tax_name <- function(query = NULL, get = NULL, db = "itis", verbose = TRUE)
     stop('Need to specify query!')
   if(is.null(get))
     stop('Need to specify get!')
-  if(length(query) > 1)
-    stop('Currently only one species per call allowed!')
   if(!db %in% c('itis', 'ncbi'))
     stop("db must be one of 'itis' or 'ncbi'")
   
-  # ITIS
-	if(db == "itis"){
-		tsn <- get_tsn(query, searchtype="sciname", verbose = verbose)
-    if(is.na(tsn)) {
-      if(verbose) cat("No TSN found for species '", query, "'!\n")
-      out <- data.frame(t(rep(NA, length(get))))
-      names(out) <- get
-    } else
-    	if(tsn=="notsn") {
-    		out <- "notsn"
-    	} else
-    		{
-    			tt <- classification(tsn)[[1]]
-          match <- tt$taxonName[match(tolower(get), tolower(tt$rankName))]
-    			out <- data.frame(t(match), stringsAsFactors=FALSE)
-    			names(out) <- get
-    		}
-	}
-  
-  # NCBI
-	if(db == "ncbi")	{
-		uid <- get_uid(query, verbose = verbose)
-    if(is.na(uid)){
-      if(verbose) cat("No UID found for species '", query, "'!\n")
-      out <- data.frame(t(rep(NA, length(get))))
-      names(out) <- get
-    } else {
-			hierarchy <- classification(uid)[[1]]
-			match <- hierarchy$ScientificName[match(tolower(get), tolower(hierarchy$Rank))]
-      out <- data.frame(t(match), stringsAsFactors=FALSE)
-      names(out) <- get
-		}
-	}
+  fun <- function(query, get, db, verbose){
+    # ITIS
+  	if(db == "itis"){
+  		tsn <- get_tsn(query, searchtype="sciname", verbose = verbose)
+      if(is.na(tsn)) {
+        if(verbose) cat("No TSN found for species '", query, "'!\n")
+        out <- data.frame(t(rep(NA, length(get))))
+        names(out) <- get
+      } else
+      	if(tsn=="notsn") {
+      		out <- "notsn"
+      	} else
+      		{
+      			tt <- classification(tsn)[[1]]
+            match <- tt$taxonName[match(tolower(get), tolower(tt$rankName))]
+      			out <- data.frame(t(match), stringsAsFactors=FALSE)
+      			names(out) <- get
+      		}
+  	}
+    
+    # NCBI
+  	if(db == "ncbi")	{
+  		uid <- get_uid(query, verbose = verbose)
+      if(is.na(uid)){
+        if(verbose) cat("No UID found for species '", query, "'!\n")
+        out <- data.frame(t(rep(NA, length(get))))
+        names(out) <- get
+      } else {
+  			hierarchy <- classification(uid)[[1]]
+  			match <- hierarchy$ScientificName[match(tolower(get), tolower(hierarchy$Rank))]
+        out <- data.frame(t(match), stringsAsFactors=FALSE)
+        names(out) <- get
+  		}
+  	}
+    return(out)
+  }
+  out <- ldply(query, .fun=function(x) fun(query=x, get=get, db=db, verbose=verbose))
   return(out)
 }
