@@ -2,7 +2,8 @@ taxize 0.0.6
 ===============
 
 NEW FEATURES
-* tax_names accepts multiple ranks to query
+* tax_name accepts multiple ranks to query
+* tax_name accepts vectors as input
 
 NOTES
 * Removed dependency to NCBI2R
